--- a/accident_prediction_notebook.ipynb
+++ b/accident_prediction_notebook.ipynb
@@ -1279,17 +1279,17 @@
    "id": "7b1b8a25",
    "metadata": {},
    "source": [
-    "## 6. Conclusion\n",
-    "### 6.1 Ringkasan Hasil  \n",
+    "## 7 Conclusion\n",
+    "### 7.1 Ringkasan Hasil  \n",
     "- **Akurasi terbaik** pada test set hanya **~36%** (Logistic Regression & Gradient Boosting), sedangkan model tree‐based lain berkisar 29–33%.  \n",
     "- **Performansi** semua model masih jauh di bawah target 75%, menunjukkan bahwa pola keparahan kecelakaan belum tertangkap dengan baik oleh fitur saat ini.  \n",
     "- **Confusion Matrix** memperlihatkan banyak salah klasifikasi antar kelas Minor, Serious, dan Fatal—tanpa bias ke satu kelas tertentu.\n",
-    "### 6.2 Insight dari Feature Importance\n",
+    "### 7.2 Insight dari Feature Importance\n",
     "- Speed Limit (km/h) dan Driver Age konsisten menjadi dua fitur paling berpengaruh di hampir semua model.\n",
     "- Number of Casualties juga memiliki bobot tinggi, menandakan kecelakaan dengan banyak korban luka cenderung lebih parah.\n",
     "- Fitur kategorikal seperti Road Condition (Under Construction, Damaged), Vehicle Type (Pedestrian, Auto‑Rickshaw), dan Weather Conditions (Stormy, Foggy) memberikan kontribusi menengah.\n",
     "- Distribusi pentingnya fitur di XGBoost lebih merata, sedangkan Random Forest dan Gradient Boosting menitikberatkan pada beberapa variabel utama.\n",
-    "### 6.3 Business Decisions\n",
+    "### 7.3 Business Decisions\n",
     "- Penegakan Batas Kecepatan\n",
     "- **Edukasi & Pelatihan Pengemudi** Program pelatihan khusus untuk kelompok usia muda (< 25 tahun) dan senior (> 60 tahun), yang menunjukkan risiko lebih tinggi.\n",
     "- **Peningkatan Infrastruktur Jalan** Fokus pada perbaikan jalan rusak dan konstruksi; tambahkan rambu, marka jalan, dan penerangan di lokasi rawan."
